--- a/src/components/chat/style.scss
+++ b/src/components/chat/style.scss
@@ -1,14 +1,38 @@
+$name-color: #494949;
+
 #chat-wrapper {
-    width: 300px;
+    width: 350px;
     height: 900px;
     background-color: white;
     float: right;
-
     #chat-container {
         width: 100%;
-        height: 80%;
-        padding: 1em;
-        font-size: 100%;
+        height: 85%;
+        padding: 0 1em;
+        box-sizing: border-box;
+        overflow-y: scroll;
+        #chat-message {
+            width: 100%;
+            font-family: 'Helvetica';
+            margin: 1em 0;
+            overflow-wrap: break-word;
+            p {
+                margin: 0;
+                padding: 0;
+            }
+            .user-name {
+                margin: 0;
+                color: $name-color;
+                font-size: 90%;
+            }
+            img {
+                float: left;
+                border-radius: 100%;
+                width: 20px;
+                height: 20px;
+                margin-right: .2em;
+            }
+        }
     }
 
     #message-form {
@@ -16,7 +40,13 @@
         textarea {
             box-sizing: border-box;
             width: 100%;
-            height: 50px;
+            height: 100px;
+            resize: none;
+            &:active, &:focus {
+                outline: none;
+            }
         }
     }
+
+    
 }
