--- a/src/components/chat/style.scss
+++ b/src/components/chat/style.scss
@@ -1,35 +1,77 @@
 $name-color: #494949;
+$main-font: 'Helvetica';
+$main-color: #B63831;
 
 #chat-wrapper {
     width: 350px;
-    height: 900px;
     background-color: white;
     float: right;
+    .user-name {
+        margin: 0;
+        margin-right: .5em;
+        color: $name-color;
+        font-size: 90%;
+        display: inline;
+    }
+    .chat-form-button {
+        background-image: url('../../assets/chat-send.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: white;
+        width: 28px;
+        height: 28px;
+        float: right;
+        margin-right: .5em;
+        &:hover {
+            cursor: pointer;
+        }
+        
+    }
+    #chat-title {
+        text-align: center;
+        font-family: $main-font;
+        font-size: 60%;
+        background-color: $main-color;
+        h2 {
+            margin: 0;
+            padding: .8em;
+            color: white;
+        }
+    }
     #chat-container {
         width: 100%;
-        height: 85%;
+        height: 75%;
         padding: 0 1em;
         box-sizing: border-box;
-        overflow-y: scroll;
+        overflow-y: auto;
         #chat-message {
-            width: 100%;
-            font-family: 'Helvetica';
+            width: 300px;
+            font-family: $main-font;
             margin: 1em 0;
+            text-align: left;
+            word-break: break-word;
             overflow-wrap: break-word;
+            display: flex;
             p {
+                display: inline;
                 margin: 0;
                 padding: 0;
-            }
-            .user-name {
-                margin: 0;
-                color: $name-color;
                 font-size: 90%;
             }
             img {
-                float: left;
                 border-radius: 100%;
-                width: 20px;
-                height: 20px;
+                width: 25px;
+                height: 25px;
+            }
+
+            #message-details {
+                display: inline-block;
+                width: 86%;
+            }
+
+            #chat-avatar {
+                display: inline-block;
+                width: 30px;
                 margin-right: .2em;
             }
         }
@@ -37,15 +79,88 @@ $name-color: #494949;
 
     #message-form {
         display: block;
+        height: 30px;
         textarea {
+            display: block;
+            margin: 0 auto;
+            border: 1px solid gray;
             box-sizing: border-box;
-            width: 100%;
-            height: 100px;
+            width: 90%;
+            height: 30px;
+            padding: .5em;
+            border: 1px solid rgb(221, 221, 221);
             resize: none;
+            box-sizing: border-box;
+            overflow: hidden;
+            font-family: $main-font;
+            font-size: 90%;
             &:active, &:focus {
                 outline: none;
             }
         }
+    }
+    #user-information {
+        padding: 0 1em;
+        margin-bottom: 1.5em;
+        margin-top: 1em;
+        position: relative;
+        img {
+            margin-right: .5em;
+            width: 32px;
+            display: inline-block;
+            top: 10px;
+            position: relative;
+        }
+        
+    }
+    #feature-tab {
+        padding: 0 1em;
+        margin-top: 2em;
+        position: relative;
+        span {
+            margin-right: 1em;
+            position: relative;
+            top: 5px;
+        }
+        img {
+            width: 25px;
+            height: 25px;
+            margin: 0 .5em;
+        }
+        #send-section {
+            float: right;
+        }
+    }
+    #emoji-picker {
+        border: 1px solid red;
+        position: absolute;
+    }
+
+    #picker-toggler {
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+
+    /* width */
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
     }
 
     
