--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -4,6 +4,10 @@ body {
     padding: 0;
 }
 
+.App {
+    display: flex;
+}
+
 .divider {
     border-bottom: 1px solid rgb(216, 216, 216);
     width: 70%;
