--- a/src/components/chat/_chat.scss
+++ b/src/components/chat/_chat.scss
@@ -13,6 +13,7 @@
     width: 350px;
     background-color: white;
     float: right;
+    font-family: $main-font;
     .user-name {
         margin: 0;
         margin-right: .5em;
