--- a/src/components/audio/_audio.scss
+++ b/src/components/audio/_audio.scss
@@ -16,38 +16,6 @@
     float: left;
 }
 
-.bar {
-    user-select: none;
-    width: 100%;
-    display: flex;
-    align-items: center;
-
-    .bar__time {
-      color: white;
-      font-size: 16px;
-    }
-
-    .bar__progress {
-      flex: 1;
-      border-radius: 5px;
-      margin: 0 20px;
-      height: 10px;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-
-      .bar__progress__knob {
-        position: relative;
-        height: 16px;
-        width: 16px;
-        border: 1.5px solid white;
-        border-radius: 50%;
-        background-color: orange;
-      }
-    }
-  }
-
-
 #music-bar {
     width: 100%;
     height: 45px;
@@ -74,6 +42,26 @@
     }
     #center-audio-controls {
         flex: 3;
+        p {
+            display: inline-block;
+            position: relative;
+            top: -10px;
+        }
+        #progress-wrapper {
+            display: inline-block;
+            padding: 0 1em;
+            width: 80%;
+            height: 90%;
+            &:hover {
+                cursor: pointer;
+            }
+        }
+        #playback-progress {
+            margin-top: 1.5em;
+            background: gray;
+            width: 100%;
+            height: 1px;
+        }
     }
     #right-audio-controls {
         flex: 1;
