--- a/src/components/audio/_audio.scss
+++ b/src/components/audio/_audio.scss
@@ -29,7 +29,7 @@
     box-sizing: border-box;
     
     #track-details {
-        flex: 2;
+        flex: 1;
         text-align: left;
         p {
             margin: 0;
@@ -42,16 +42,55 @@
     }
     #center-audio-controls {
         flex: 3;
+        #like-track {
+            float: left;
+            width: 22px;
+            height: 22px;
+            background-image: url('../../assets/track-like.svg');
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            position: relative;
+            top: .9em;
+            margin-left: 1em;
+            transition: all .1s;
+            &:hover {
+                cursor: pointer;
+                background-image: url('../../assets/track-like-active.svg');
+            }
+        }
+        #volume-button {
+            float: left;
+            width: 22px;
+            height: 22px;
+            background-image: url('../../assets/volume-control.svg');
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            position: relative;
+            top: .9em;
+            margin-left: 2em;
+            &:hover {
+                cursor: pointer;
+            }
+        }
         p {
             display: inline-block;
             position: relative;
-            top: -10px;
+            top: -2px;
+        }
+        #middle-controls {
+            display: flex;
+            justify-content: center;
+            margin: 0 auto;
+            width: 70%;
+            height: 40px;
+            margin-top: .1em;
         }
         #progress-wrapper {
             display: inline-block;
             padding: 0 1em;
-            width: 80%;
-            height: 90%;
+            width: 100%;
             &:hover {
                 cursor: pointer;
             }
@@ -61,6 +100,15 @@
             background: gray;
             width: 100%;
             height: 1px;
+        }
+        #progress-ball {
+            width: 14px;
+            height: 14px;
+            border-radius: 100%;
+            background: $name-color;
+            position: relative;
+            top: -6px;
+            left: 0px;
         }
     }
     #right-audio-controls {
