Home Page tune up

--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -1,13 +1,10 @@
+@import '../../utilities.scss';
+
 body {
     background-color: #18191A;
     margin: 0;
     padding: 0;
 }
-
-.App {
-    display: flex;
-}
-
 .divider {
     border-bottom: 1px solid rgb(216, 216, 216);
     width: 70%;
@@ -20,7 +17,92 @@ body {
     padding: .5em;
 }
 
+.track-browse {
+    text-align: left;
+    margin-top: 4em;
+    padding: 1em;
+    padding-left: 4em;
+    font-size: 110%;
+}
+
+.track-name {
+    margin: .5em 0;
+    margin-bottom: .2em;
+}
+.track-artist {
+    margin: 0;
+    color: lighten($color: $name-color, $amount: 15%);
+    font-size: 90%;
+}
+
+.track-overview {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.track-container {
+    flex: 1;
+    margin: 1em 0;
+    img {
+        display: block;
+        width: 240px;
+        height: 169px;
+    }
+}
+
+.sign-in-btn, .create-account-btn {
+    background-color: $main-color;
+    color: white;
+    display: inline-block;
+    margin: 0 .5em;
+    text-decoration: none;
+    
+
+}
+
 #home-wrapper {
     padding: 0;
     margin: 0;
+    padding-top: 2em;
+    font-family: $main-font;
+    text-align: center;
+    color: white;
+    width: 100%;
+    height: 700px;
+    overflow: auto;
+
+    #welcome-heading {
+        width: 80%;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .sub-heading {
+        font-size: 100%;
+    }
+    h2 {
+        letter-spacing: 1px;
+    }
+}
+
+ /* width */
+ ::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
