--- a/src/components/common/_common.scss
+++ b/src/components/common/_common.scss
@@ -1,10 +1,49 @@
+@import '../../utilities.scss';
+
+.right-tabs {
+    float: right;
+}
+
+.account-tab {
+    margin-left: 1em;
+}
+
+.App {
+    display: flex;
+}
+
+#user-account-tab {
+    float: right;
+    transition: all .2s;
+    &:hover {
+        cursor: pointer;
+        opacity: 0.6;
+    }
+    img {
+        border-radius: 100%;
+        width: 32px;
+        height: 29px;
+        position: relative;
+        top: -.3em;
+    }
+    a:hover {
+        color: white !important;
+    }
+}
+
 nav {
-    padding-top: 1em;
+    padding-top: 2em;
     flex:1;
+    height: 40px;
+    width: 100%;
     a {
         color: white;
-        font-family: 'Helvetica';
+        font-family: $main-font;
         text-decoration: none;
         margin: 0 2em;
+        transition: color .2s;
+        &:hover:not(#user-account-tab) {
+            color: $name-color;
+        }
     }
 }
