--- a/src/components/common/_common.scss
+++ b/src/components/common/_common.scss
@@ -36,6 +36,7 @@ nav {
     flex:1;
     height: 40px;
     width: 100%;
+    overflow: hidden;
     a {
         color: white;
         font-family: $main-font;
