--- a/src/components/chat/_chat.scss
+++ b/src/components/chat/_chat.scss
@@ -15,10 +15,13 @@
     background-color: white;
     float: right;
     font-family: $main-font;
-    height: 100%;
+    height: 85%;
     padding-bottom: 1em;
     position: fixed;
     right: 0;
+    bottom: 45px;
+    overflow: hidden;
+    transition: all .2s;
     .user-name {
         margin: 0;
         margin-right: .5em;
@@ -45,6 +48,9 @@
         font-family: $main-font;
         font-size: 60%;
         background-color: $main-color;
+        &:hover {
+            cursor: pointer;
+        }
         h2 {
             margin: 0;
             padding: .8em;
