--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -1,7 +1,7 @@
 @import '../../utilities.scss';
 
 body {
-    background-color: #18191A;
+    background-color: $body-color;
     margin: 0;
     padding: 0;
 }
@@ -23,6 +23,7 @@ body {
     padding: 1em;
     padding-left: 4em;
     font-size: 110%;
+    font-family: $main-font;
 }
 
 .track-name {
@@ -36,19 +37,31 @@ body {
 }
 
 .track-overview {
-    width: 90%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
 }
 .track-container {
-    flex: 1;
-    margin: 1em 0;
+    width: 25%;
+    margin: .5em 0;
+    margin-right: 1.5em;
+    min-width: 200px;
+    max-width: 300px;
+    padding: .5em;
+    border-radius: 20px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    transition: border .2s;
+    &:hover {
+        cursor: pointer;
+        opacity: 0.9;
+        border: 1px solid lighten($color: $body-color, $amount: 10%);
+    }
     img {
         display: block;
-        width: 240px;
-        height: 169px;
+        width: 100%;
+        height: auto;
     }
 }
 
@@ -70,8 +83,7 @@ body {
     text-align: center;
     color: white;
     width: 100%;
-    height: 700px;
-    overflow: auto;
+    margin-bottom: 5em;
 
     #welcome-heading {
         width: 80%;
