--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -45,7 +45,7 @@ body {
 .track-container {
     width: 25%;
     margin: .5em 0;
-    margin-right: 1.5em;
+    margin-right: 0em;
     min-width: 200px;
     max-width: 300px;
     padding: .5em;
@@ -61,7 +61,7 @@ body {
     img {
         display: block;
         width: 100%;
-        height: auto;
+        height: 65%;
     }
 }
 
