--- a/src/components/audio/_audio.scss
+++ b/src/components/audio/_audio.scss
@@ -16,6 +16,32 @@
     float: left;
 }
 
+#playlist-manager-wrapper {
+    width: 450px;
+    max-width: 450px;
+    min-width: 300px;
+    height: 400px;
+    background-color: white;
+    position: fixed;
+    float: left;
+    bottom: 50px;
+    font-family: $main-font;
+    #playlist-title {
+        text-align: center;
+        font-family: $main-font;
+        font-size: 70%;
+        background-color: $main-color;
+        &:hover {
+            cursor: pointer;
+        }
+        h2 {
+            margin: 0;
+            padding: .8em;
+            color: white;
+        }
+    }
+}
+
 #music-bar {
     width: 100%;
     height: 50px;
