--- a/src/components/audio/_audio.scss
+++ b/src/components/audio/_audio.scss
@@ -21,15 +21,17 @@
     max-width: 450px;
     min-width: 300px;
     height: 400px;
-    background-color: white;
+    background-color: #18191A;
+    color: white;
     position: fixed;
     float: left;
     bottom: 50px;
     font-family: $main-font;
+    transition: all .2s;
     #playlist-title {
         text-align: center;
         font-family: $main-font;
-        font-size: 70%;
+        font-size: 65%;
         background-color: $main-color;
         &:hover {
             cursor: pointer;
@@ -38,6 +40,41 @@
             margin: 0;
             padding: .8em;
             color: white;
+        }
+    }
+
+    #pm-track-wapper {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .pm-track-container {
+        padding: .2em 1em;
+        height: 40px;
+        border: 1px solid black;
+      
+        &:hover {
+            border: 1px solid white;
+            cursor: pointer;
+        }
+        img {
+            width: 40px;
+            height: 40px;
+            margin-right: 1em;
+            float: left;
+        }
+        p {
+            display: inline-block;
+            line-height: 1.5em;
+        }
+        .track-artist {
+            margin-left: 1em;
+            font-size: 100%;
+            color: lighten($color: $name-color, $amount: 50%);
+        }
+        .track-playing {
+            border: 1px solid white !important;
         }
     }
 }
