--- a/src/components/art/_art.scss
+++ b/src/components/art/_art.scss
@@ -1,13 +1,11 @@
 @import '../../utilities.scss';
 
-
 .photo-column {
-    max-width: 400px;
+    max-width: 350px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     img:not(.artist-avatar) {
-        margin: .2em;
         object-fit: cover;
         transition: all .2s;
         transition-timing-function: ease-in-out;
@@ -17,26 +15,18 @@
     }
 }
 
-.detail-wrapper {
-    position: relative;
-    width: 400px;
-    height: 400px;
-    height: auto;
-}
-
 .glass {
     /* --- the magic --- */
-    color: white;
     position: absolute;
-    bottom: 0;
+    bottom: 4px;
+    left: 0;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
   
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 1px 20px 0 rgba(0, 0, 0, 0.1);
     /* ----------------- */
-    width: 99%;
-    left: 4px;
     padding: .2em;
     box-sizing: border-box;
     height: 50px;
@@ -46,35 +36,53 @@
     font-family: $main-font;
     p {
         float: left;
-        margin-left: 1em;
+        color: lighten($color: $name-color, $amount: 60%);
+        margin-left: .5em;
     }
 }
-
-
 .artist-avatar {
-    width: 36px;
-    height: 36px;
     border-radius: 100%;
     float: left;
     margin-left: .5em;
-    margin-top: .2em;
+    margin-top: .5em;
 }
-
-
-
 #art-wrapper {
     margin: 0 auto;
-    margin-top: .2em;
-    width: 90%;
+    margin-top: 2em;
     max-width: 1220px;
     display: flex;
     flex-wrap: wrap;
     position: relative;
     padding-bottom: 10em;
 
+    .view-details {
+        float: right;
+        .view-icon {
+            float: left;
+            margin-top: .8em;
+            width: 28px;
+        }
+        p {
+            margin-right: 1em;
+        }
+    }
+
+    button {
+        margin-top: .9em;
+        margin-right: 1em;
+        float: right;
+        transition: all .2s;
+        &:hover {
+            cursor: pointer;
+            opacity: 0.7;
+        }
+    }
+    
+
     .art-image-container {
         position: relative;
-        max-width: 400px;
-        height: 400px;
+        img:not(.artist-avatar) {
+            width: 100%;
+        }
     }
 }
