--- a/src/components/audio/_audio.scss
+++ b/src/components/audio/_audio.scss
@@ -11,8 +11,8 @@
 
 //Icons
 .play-playlist {
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     margin-left: 1.5em;
     background-image: url('../../assets/stream-play.svg');
     &:hover {
@@ -20,17 +20,19 @@
     }
 }
 .playlist-pause {
-    width: 32px;
-    height: 32px;
+    width: 25px;
+    height: 25px;
     margin-left: 1.5em;
+    position: relative;
+    top: -.2em;
     background-image: url('../../assets/playlist-pause.svg');
     &:hover {
         cursor: pointer;
     }
 }
 .expand-playlist {
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     margin-top: .4em;
     background-image: url('../../assets/down-arrow.svg');
     transition: all .2s;
@@ -39,8 +41,8 @@
     }
 }
 .expanded-playlist {
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     margin-top: .4em;
     background-image: url('../../assets/down-arrow.svg');
     transition: all .2s;
